post creation spacing fix

--- a/src/app/features/posts/create-post/create-post.component.scss
+++ b/src/app/features/posts/create-post/create-post.component.scss
@@ -1,7 +1,10 @@
-:host {
+.container {
     margin: 0 auto;
-    width: 400px;
+    width: fit-content;
     max-width: 100%;
+}
+
+.form {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
